--- a/index.html
+++ b/index.html
@@ -30,13 +30,27 @@
     <td>123</td>
     <td>123</td>
 </tr>
-<tr>
-    <td>234</td>
-    <td>234</td>
-    <td>123</td>
-    <td>123</td>
-</tr>
-</tabla>
+
+</table>
+<ol>
+    <li>Alakzatok</li>
+</ol>
+<ul>
+    <li>kör</li>
+    <li>nnégyzet</li>
+    <li>háromszög</li>
+</ul>
+<ol>
+    <li>műveletek</li>
+</ol>
+<ul>
+    <li>összeadás</li>
+    <li>kivonás</li>
+    <li>szorzás</li>
+    <li>osztás</li>
+</ul>
+</ol>
     
+
 </body>
 </html>
